update-manager (1:0.93.31) intrepid; urgency=low

  * DistUpgrade/DistUpgrade.cfg:
    - remove goubuntu-desktop from metapackages, we do no
      longer build it (LP: #288267)

 --

update-manager (1:0.93.30) intrepid; urgency=low

  * DistUpgrade/DistUpgradeViewText.py:
    - fix incorrect "default" argument handling in 
      askYesNoQuestion
  * DistUpgrade/DistUpgradeQuirks.py:
    - ensure "landscape-common" is not marked auto-install
      (LP: #288051)
  * DistUpgrade/DistUpgradeAptCdrom.py:
    - ignore "dist-upgrader" dirs when scanning for 
      packages (LP: #288169)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 23 Oct 2008 16:53:43 +0200

update-manager (1:0.93.29) intrepid; urgency=low

  * fix incorrect case and typo in cpuHasSSESupport(), thanks
    to Steve Langasek

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 20 Oct 2008 19:17:22 +0200

update-manager (1:0.93.28) intrepid; urgency=low

  * DistUpgrade/DistUpgradeQuirks.py:
    - do not install nvidia-glx-{173,177} on systems without
      the "sse" cpu extension (LP: #272498)
    - fix case-sensitive parsing when checking for the xorg
      driver
  * DistUpgrade/DistUpgrade.cfg:
    - make sure that libflashsupport gets removed on upgrade
      (LP: #285657)
  * DistUpgrade/ReleaseAnnouncement:
    - updated for the release candidate

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 20 Oct 2008 16:55:40 +0200

update-manager (1:0.93.27) intrepid; urgency=low

  * DistUpgrade/xorg_fix_intrepid.py:
    - only update the InputDevices if xserver-xorg-core
      actually is version 2:1.5.0 or higher
    - make section checks case-insensitive (thanks to
      Alberto Milone)
  * DistUpgrade/DistUpgrade.glade:
    - remove has_focus default in the conffiel dialog

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 20 Oct 2008 09:47:57 +0200

update-manager (1:0.93.26) intrepid; urgency=low

  * DistUpgrade/DistUpgradeController.py:
    - workaround kde tmpfile permissions (LP: #277431)